Added commit for 0 and 1

--- a/book_eu/00.md
+++ b/book_eu/00.md
@@ -89,7 +89,7 @@ Zure txanda da! 0.0 ariketa
 Idatzi zure izena pantaila bidez erakusten duen programa bat.
 
 ```python
-print ("Kaixo Ada naiz")
+print("Kaixo, Ada naiz")
 ```
 Emaitza:
 
@@ -173,10 +173,10 @@ Horretarako hainbat aukera daude:
 Nahikoa da aldagaiak eta testua komekin tartekatzea:
 
 ```python
-izena = "Bug"
-adina = 10
-print ("Kaixo, izena dut", izena)
-print ("Naiz", izena, "dut", adina, "urteak")
+izena = "Juan"
+adina = 34
+print("Zure izena da", izena, ",", adina, "urte dituzu")
+# print("Zure izena da %s, %d urte dituzu" % (izena, adina))
 ```
 
 Emaitza pantailan:
@@ -188,7 +188,7 @@ Bug naiz, 10 urte ditut.
 
 Orain zu! 0.1 ariketa
 
-Sortu bi aldagai `izen eta edadetu, eta erakutsi haien balioa pantailan.
+Sortu bi aldagai izen eta adina, eta erakutsi haien balioa pantailan.
 
 ```python
 izena = "Ada"
@@ -302,7 +302,7 @@ Testua, kateak edo* strings* ere deituak, komatxo bikoitz edo sinpleen arteko ed
 izena = "Ada"
 esaldia = "
 hitzak = 'Lanera noa'
-novia = 'Lagunak izatea besterik ez dut nahi'
+neska = 'Lagunak izatea besterik ez dut nahi'
 ```
 
 Testuaren kasuan, zenbait karaktere berezi sar ditzakegu, ondorio interesgarriak izateko. Karaktere horiek kontra-barra batekin edo* backslash* batekin idazten dira aurretik.
@@ -358,8 +358,8 @@ Datuak, hau da, egiazkoak edo okerrak. Programazioan funtsezko datua da, erabaki
 
 ```python
 amaituta = False
-esMayor = True
-pythonMola = True
+handiagoaDa = True
+pythonItzelaDa = True
 ```
 
 ## Zerrendak
@@ -415,15 +415,15 @@ Idatzi hemen ikusitako mota bakoitzaren aldagai bat definituko duen programa bat
 izena = "Ada"
 adina = 42
 pisua = 101.54
-vivo = True
-aberastasunak = None
+bizirik = True
+dirua = None
 lagunak = ["Ada", "Ruby", "Miranda"]
 
 print (izena)
 print (adina)
 print (pisua)
 print (bizirik)
-print (aberastasunak)
+print (dirua)
 print (lagunak)
 ```
 
@@ -433,7 +433,7 @@ Emaitza:
 Ada
 42
 101.54
-true
+True
 null
 ["Ada", "Ruby", "Miranda"]
 ```
@@ -447,8 +447,9 @@ Oraingoz ikusten ari garenak bezalako oinarrizko programek kontsola erabiltzen d
 Erabiltzaileari datu bat eskatu eta aldagai batean gordetzeko, honako funtzio hau erabiltzen da:
 
 ```python
-izena = input ("Esadazu zure izena:")
-print ("Kaixo", izena)
+izena = input("Sartu zure izena: ")
+print("Kaixo, zer moduz zaude ", izena)
+# print("Kaixo, zer moduz zaude %s" % izena)
 ```
 
 Pantailan honako hau ikusiko zenuke:
@@ -491,7 +492,7 @@ Erabiltzaileak zerbait idazteko,*** delako funtzioa erabiltzen duzun bakoitzean,
 ```python
 balioa = input ("Eman zenbaki bat:")
 bikoitza = balioa + balioa
-print (bikoitza)
+print(bikoitza)
 ```
 
 Erabiltzaileak "4" bezalako zenbaki bat sartuz gero, emaitza hau izango litzateke:
@@ -507,7 +508,7 @@ Hori saihesteko, beste funtzio bat erabili behar dugu datu hori zenbaki oso bihu
 
 ```python
 balioa = input ("Eman zenbaki bat:")
-bikoitza = int (balioa) + int (balioa)
+bikoitza = int(balioa) + int(balioa)
 print (bikoitza)
 ```
 
@@ -540,10 +541,10 @@ Emadazu zenbaki bat: 4
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat eta gehitu 10. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Gogoratu sartutako balioa zenbaki oso bihurtzeko sartzea komeni dela.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-emaitza = int (balioa) + 10
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) + 10
 
-print ("Batura hau da:", emaitza)
+print("Batura hau da:", emaitza)
 ```
 
 Emaitza:
@@ -573,7 +574,7 @@ Hori saihesteko, testu-mota behartu behar dugu `str ()» erabiliz:
 
 ```python
 balioa = 66
-testua = "Nire adina da" + str (balioa)
+testua = "Nire adina da " + str(balioa)
 ```
 
 Beraz, batzuetan balio bat mota jakin batean bihurtu beharko dugu. Hauek dira bihurtzeko funtzioak:
@@ -603,7 +604,7 @@ Hauek dira programazioko oinarrizko eragiketak:
 - Batuketa: `+
 - Kenketa:
 - Biderketa:
-- Dibisioa:
+- Zatiketa:
 
 Adibidez, egun batek zenbat segundo dituen kalkulatzeko:
 
@@ -629,10 +630,10 @@ batez bestekoa = (ada + bug + neko)/3
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-emaitza = int (balioa) - 5
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) - 5
 
-print ("Kenketa da:", emaitza)
+print("Kenketa da:", emaitza)
 ```
 
 Emaitza:
@@ -714,14 +715,14 @@ Gauza bera egin daiteke operadore guztiekin:
 Idatzi erabiltzaileari zenbaki bat eskatu eta handitu egingo duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza. Ondoren, balioa murriztu behar du eta emaitza kontsola bidez erakutsi. Operadore laburtuak erabili!
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-balioa + = 1
+balioa = input("Sartu zenbaki bat: ")
+balioa += 1
 
-print ("Gehikuntza da", balioa)
+print("Inkrementua da", balioa)
 
-balioa - = 1
+balioa -= 1
 
-print ("Beherakada da", balioa)
+print("Dekrementua da", balioa)
 ```
 
 Emaitza:
@@ -776,12 +777,12 @@ Emaitza hauxe izango litzateke: `Trueu.
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Gero, bere desberdintasuna alderatu behar du eta emaitza kontsolaren bidez erakutsi behar du.
 
 ```python
-valor1 = input ("Sartu zenbaki bat:")
-valor2 = input ("Sartu beste zenbaki bat:")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-emaitza = 1 balorazioa! = 2
+emaitza = balio1 != balio2
 
-print ("Desberdinak dira?", emaitza)
+print("Ezberdinak al dira?", emaitza)
 ```
 
 Emaitza:
@@ -801,7 +802,7 @@ Operadore horrek `Trueu 'itzuliko du, baldin eta bi operadoreak ere `Trueu:
 
 ```python
 balioa = 5
-emaitza = (balioa = = 5) and True;
+emaitza = (balioa == 5) and True;
 ```
 
 Emaitza hauxe izango litzateke: `Trueu.
@@ -818,11 +819,11 @@ Aukera guztiak laburbiltzeko, horri esaten zaio operadorearen egiaren taula.
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino handiagoa den eta, gainera, bikoitia den alderatu behar duzu.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
-emaitza = (balioa > = 0) and (balioa % 2 = = 0)
+balioa = input("Zenbaki bat sartu: ")
+balioa = int(balioa)
+emaitza = (balioa >= 0) and (balioa % 2 == 0)
 
-print ("Parea eta positiboa al da?", emaitza)
+print("Bikoitza eta positiboa da?", emaitza)
 ```
 Emaitza:
 
@@ -853,12 +854,12 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula
 Idatzi programa bat erabiltzaileari bi zenbaki eskatzeko eta bietako bat positiboa den egiaztatzeko. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
-valor1 = input ("Sartu zenbaki bat:")
-valor2 = input ("Sartu beste zenbaki bat:")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-emaitza = (int (valor1) > = 0) or (int (valor2) > = 0)
+emaitza = (int(balio1) >= 0) or (int(balio2) >= 0)
 
-print ("Bietako bat positiboa al da?", emaitza)
+print("Zenbaki batek ala besteek positiboa dute?", emaitza)
 ```
 Emaitza:
 
@@ -888,13 +889,14 @@ Aukera guztiak laburbiltzeko, hauxe izango litzateke operadorearen egiaren taula
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, eta egiaztatu ez dela ez positiboa ez bikoitia.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
-positiboaYPar = (balioa > = 0) and (balioa % 2 = = 0)
-emaitza = not positiboaYPar
-print ("Ez al da parea eta positiboa?", emaitza)
+positiboaEtaBikoitia = (balioa >= 0) and (balioa % 2 == 0)
+emaitza = not positiboaEtaBikoitia
+print("Bikoitia eta positiboa da?", emaitza)
 ```
+
 Emaitza:
 
 ```console
@@ -919,10 +921,10 @@ Oro har, baldintzapeko eragileak baldintzapeko blokeen, begizten eta abarren bal
 Idatzi erabiltzaileari zenbaki bat eskatu eta 7 biderkatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-emaitza = int (balioa)* 7
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) * 7
 
-print ("Biderketa da:", emaitza)
+print("Biderketa honakoa da:", emaitza)
 ```
 
 Emaitza:
@@ -933,7 +935,7 @@ Biderketa hau da: 21
 ```
 
 0.1 ariketa
-Idatzi erabiltzaileari zenbaki bat eskatu eta bitan banatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
+Idatzi erabiltzaileari zenbaki bat eskatu eta bitan zatikatuko duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
 balioa = input ("Sartu zenbaki bat:")
@@ -952,10 +954,10 @@ Banaketa hau da: 30
 Idatzi erabiltzaileari zenbaki bat eskatu eta 3. modulua egiten duen programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-emaitza = int (balioa) % 3
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) % 3
 
-print ("Modulua da:", emaitza)
+print("Modulua honako hau da:", emaitza)
 ```
 
 Emaitza:
@@ -968,10 +970,10 @@ Modulua hau da: 1
 Idatzi erabiltzaileari zenbaki bat eskatu eta 2ko esponentziala aplikatuko dion programa bat. Jarraian, kontsola bidez erakutsi behar duzu emaitza.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-emaitza = int (balioa)** 2
+balioa = input("Sartu zenbaki bat: ")
+emaitza = int(balioa) ** 2
 
-print ("Esponentziala da:", emaitza)
+print("Esponentzialaren emaitza:", emaitza)
 
 ```
 Emaitza:
@@ -986,11 +988,11 @@ Esponentziala hau da: 16
 Idatzi erabiltzaileari zenbaki bat eskatu eta 5 kentzen dion programa bat. Jarraian, zeinua aldatu behar diozu eta emaitza kontsolarekin erakutsi.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-resta = int (balioa) - 5
-emaitza = -resta
+balioa = input("Sartu zenbakia: ")
+kenketa = int(balioa) - 5
+emaitza = -kenketa
 
-print ("Azken kenketa da:", emaitza)
+print("Kenketa azkena da:", emaitza)
 ```
 
 Emaitza:
@@ -1005,12 +1007,12 @@ Hau da azken kenketa: 1
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, % 2 eragiketa 0ren berdina den egiaztatu behar duzu, eta emaitza erakutsi. Zenbaki bat 2rekin zatitzen bada eta kenketa 0 bada, zenbaki hori bikoitia dela esan nahi du.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-modulua = int (balioa) % 2
+balioa = input("Sartu zenbaki bat: ")
+moduloa = int(balioa) % 2
 
-emaitza = modulua = = 0
+emaitza = moduloa == 0
 
-print ("Balioa parea da?", emaitza)
+print("Balioa bikoitia al da?", emaitza)
 ```
 
 Emaitza
@@ -1024,12 +1026,13 @@ Kemena bikoitia da? True
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, zenbaki hori 0 edo handiagoa den egiaztatu behar duzu, hau da, positiboa den.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
+balioa = input("Sartu zenbaki bat: ")
 
-emaitza = int (balioa) > = 0
+emaitza = int(balioa) >= 0
 
-print ("Positiboa al da?", emaitza)
+print("Positiboa da?", emaitza)
 ```
+
 Emaitza:
 
 ```console
@@ -1042,11 +1045,11 @@ Positiboa da? True
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, lehenengoa 0 baino txikiagoa den alderatu behar duzu, eta emaitza kontsolaren bidez erakutsi. Zenbakia negatiboa den antzematen ariko ginateke.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
+balioa = input("Sartu zenbaki bat: ")
 
-emaitza = int (balioa) < 0
+emaitza = int(balioa) < 0
 
-print ("Negatiboa al da?", emaitza)
+print("Negatiboa da?", emaitza)
 ```
 
 Emaitza:
