--- a/book_eu/01.md
+++ b/book_eu/01.md
@@ -10,9 +10,9 @@ Baldintza bat egiteko egiturarik sinpleena `ifi 'da, eta itxura hau du:
 
 ```python
 if* baldintza*:
-* jarraibideak*
-* jarraibideak*
-*...*
+    *eragiketak*
+    *eragiketak*
+    *...*
 ```
 
 Ikus dezakezunez, baldintza batekin hasten da. Baldintza boolear batek itzultzen duen edozein adierazpen izan daiteke, hau da, `Trueu edo `Falseu, egiazkoa edo faltsua.
@@ -21,8 +21,10 @@ Adibidez:
 
 ```python
 balioa = -2
+
 if balioa < 0:
-print ("Balioa 0 baino txikiagoa da")
+    print ("Balioa 0 baino txikiagoa da")
+
 print ("Programaren amaiera")
 ```
 
@@ -37,8 +39,10 @@ Aldiz:
 
 ```python
 balioa = 5
+
 if balioa < 0:
-print ("Balioa 0 baino txikiagoa da")
+    print ("Balioa 0 baino txikiagoa da")
+
 print ("Programaren amaiera")
 ```
 
@@ -56,10 +60,10 @@ Oso garrantzitsua den zerbait ere kontuan hartu behar duzu: "ifi" aren barruko j
 Idatzi erabiltzaileari zenbaki bat eskatzen dion eta negatiboa den egiaztatzen duen programa bat. So negatiboa da, mezu bat erakutsi behar duzu kontsola bidez.
 
 ```python
-balioa = input ("Idatz ezazu zenbaki bat:")
+balioa = input("Idatzi zenbaki bat: ")
 
-if int (balioa) < 0:
-print ("Negatiboa da")
+if int(balioa) < 0:
+    print("Negatiboa da")
 
 ```
 
@@ -76,9 +80,9 @@ IFarekin bloke bat sor dezakegu, baldintza bat betetzen bada bakarrik exekutatze
 
 ```python
 if* baldintza*:
-* jarraibideak*
-LKse:
-* jarraibideak*
+    *eragiketak*
+else:
+    *eragiketak*
 ```
 
 Adibidez:
@@ -110,14 +114,14 @@ Ez duzu ezer sartu!
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "agurra" bada, agur bat adierazi behar duzu; bestela, "ez dut ulertzen" dioen mezu bat erakutsi behar duzu.
 
 ```python
-testua = input ("Idatzi testu bat:")
+testua = input("Sartu testua: ")
 
-if testua = = "agurra":
-    print ("Kaixo!")
+if testua == "agurra":
+    print("Kaixo!")
 else:
-    print ("Ez dut ulertzen. ")
-
+    print("Ez dut ulertzen.")
 ```
+
 Emaitza:
 
 ```console
@@ -132,7 +136,7 @@ Bada beste aldaera bat hainbat baldintza egiaztatu behar ditugunean. Horretarako
 ```python
 if *1 baldintza*:
     *eragiketak*
-elif: *2. baldintza*:
+elif: *2 baldintza*:
     *eragiketak*
 elif: *baldintza3*
     *eragiketak*
@@ -143,35 +147,35 @@ else:
 Demagun hizkuntza desberdinetan agurtzeko gai den programa bat nahi dugula. Honelako programa bat sor dezakegu:
 
 ```python
-hizkuntza = input ("Zer hizkuntza hitz egiten duzu?")
+hizkuntza = input ("Zer hizkuntzan hitz egiten duzu?")
 
-if idioma = = "Español":
+if hizkuntza == "Espainera":
     print ("Kaixo"):
-elif idioma = = "Inglés":
+elif hizkuntza == "Ingelera":
     print ("Hello"):
-elif idioma = = "Francés":
+elif hizkuntza == "Frantsesa":
     print ("Salut")
-LKse:
+else:
     print ("Ez dut hizkuntza hori ezagutzen")
 ```
 
-Behar adina `hautetsi 'izan ditzakegu.
+Behar adina `elif` izan ditzakegu.
 
 1.2 ariketa
 
 Idatzi erabiltzaileari testu bat eskatzen dion programa bat. Testua "bihar" bada, "Egun on" mezua erakutsi behar duzu, testua "berandu" bada, "Arratsalde on" mezua erakutsi behar duzu, eta, bestela, "Gabon" mezua erakutsi behar duzu.
 
 ```python
-testua = input ("Idatzi testu bat:")
+testua = input("Idatzi testua: ")
 
-if testua = = "bihar":
-print ("Egun on. ")
-elif testua = = "arratsaldea":
-print ("Arratsalde on. ")
-elif testua = = "gaua":
-print ("Gabon. ")
-LKse:
-print ("Ez dut ulertzen. ")
+if testua == "bihar":
+    print("Egun on.")
+elif testua == "arratsalde":
+    print("Arratsalde on.")
+elif testua == "gau":
+    print("Gabon.")
+else:
+    print("Ez dut ulertzen.")
 
 ```
 
@@ -187,15 +191,15 @@ Arratsalde on.
 Sortu programa bat erabiltzaileari bi balio oso eskatzeko, alderatzeko eta pantaila bidez erakusteko bat bestea baino handiagoa den edo berdinak diren.
 
 ```python
-numero1 = input ("Sartu zenbaki bat:")
-numero2 = input ("Sartu beste zenbaki bat:")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-if 1 zenbakia > 2 zenbakia:
-print (1. zenbakia, "baino handiagoa da", 2. zenbakia)
-LKif 1. zenbakia < 2. zenbakia:
-print (1. zenbakia, "baino txikiagoa da", 2. zenbakia)
-LKse:
-print (1. zenbakia, "berdin da", 2. zenbakia)
+if balio1 > balio2:
+    print(balio1, " ", balio2, " baino handiagoa da")
+elif balio1 < balio2:
+    print(balio1, " ", balio2, " baino txikiagoa da")
+else:
+    print(balio1, " ", balio2, "berdinak dira")
 ```
 
 Emaitza:
@@ -212,15 +216,15 @@ Sartu beste zenbaki bat: 10
 Sortu programa bat erabiltzaileari bi balio oso eskatuko dizkiona eta pantaila bidez erakutsiko duena lehenengoa bigarrenaren multiploa den. Zenbaki bat bestearen multiploa den jakiteko, moduluaren eragiketa egin behar duzu ( % `u) haien artean: 0 bada, multiploa izango da.
 
 ```python
-numero1 = input ("Sartu zenbaki bat:")
-numero2 = input ("Sartu beste zenbaki bat:")
+balio1 = input("Sartu zenbaki bat: ")
+balio2 = input("Sartu beste zenbaki bat: ")
 
-gainerakoa = int (1. zenbakia) % int (2. zenbakia)
+resto = int(balio1) % int(balio2)
 
-if hondarra = = 0:
-print (1. zenbakia, "multiploa da", 2. zenbakia)
-LKse:
-print (1. zenbakia, "EZ da multiploa", 2. zenbakia)
+if resto == 0:
+  print(balio1, " zenbakia ", balio2, " zenbakiaren bikoitza da.")
+else:
+  print(balio1, " zenbakia ", balio2, " zenbakirik ez da bikoitza.")
 ```
 
 Emaitza:
@@ -236,17 +240,17 @@ Sartu beste zenbaki bat: 4
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egin hau: lehenik eta behin pantailan erakutsi behar du zenbakia negatiboa edo positiboa den. Gero, zenbakia positiboa bada, negatibo bihurtu behar du, eta negatiboa bada, positibo.
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia > = 0:
-print (zenbakia, "positiboa da")
-LKse:
-print (zenbakia, "negatiboa da")
+if zenbakia >= 0:
+    print(zenbakia, " positiboa da")
+else:
+    print(zenbakia, " negatiboa da")
 
-numero = -numero
+zenbakia = -zenbakia
 
-print ("Bihurketa:", zenbakia)
+print("Bihurketa: ", zenbakia)
 ```
 
 Emaitza:
@@ -261,34 +265,34 @@ Bihurketa: 6
 Idatzi urteko hilabete bateko zenbakia eskatzen duen programa bat eta erakutsi zenbat egun dituen. Hilabete ezezagun bat sartuz gero, "Ez dakigu" mezua erakutsi.
 
 ```python
-mes = input ("Sartu urteko hilabete bat:")
+hilabetea = input("Sartu urteko hilabete bat: ")
 
-if mes = = "Urtarrila":
-print ("31 egun")
-elif mes = = "Otsaila":
-print ("28/29 egun")
-elif mes = = "Martxoa":
-print ("31 egun")
-elif mes = = "Apirila":
-print ("30 egun")
-elif mes = = "Maiatza":
-print ("31 egun")
-elif mes = = "Ekaina":
-print ("30 egun")
-elif mes = = "Uztaila":
-print ("31 egun")
-elif mes = = "Abuztua":
-print ("31 egun")
-elif mes = = "Iraila":
-print ("30 egun")
-elif mes = = "Urria":
-print ("31 egun")
-elif mes = = "Azaroa":
-print ("30 egun")
-elif mes = = "Abendua":
-print ("31 egun")
-LKse:
-print ("Hilabete ezezaguna")
+if hilabetea == "Urtarrila":
+    print("31 egun ditu")
+elif hilabetea == "Otsaila":
+    print("28/29 egun ditu")
+elif hilabetea == "Martxoa":
+    print("31 egun ditu")
+elif hilabetea == "Apirila":
+    print("30 egun ditu")
+elif hilabetea == "Maiatza":
+    print("31 egun ditu")
+elif hilabetea == "Ekaina":
+    print("30 egun ditu")
+elif hilabetea == "Uztaila":
+    print("31 egun ditu")
+elif hilabetea == "Abuztua":
+    print("31 egun ditu")
+elif hilabetea == "Iraila":
+    print("30 egun ditu")
+elif hilabetea == "Urria":
+    print("31 egun ditu")
+elif hilabetea == "Azaroa":
+    print("30 egun ditu")
+elif hilabetea == "Abendua":
+    print("31 egun ditu")
+else:
+    print("Hilabete ezezaguna")
 ```
 
 Emaitza:
@@ -303,17 +307,17 @@ Sartu urteko hilabete bat: Ekaina
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatzen diona eta pantailan zenbaki hori bikoitia eta positiboa den erakusten duena. Bestela, negatiboa, bakoitia edo biak diren adierazi behar duzu.
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbaki = input("Sartu zenbaki bat: ")
+zenbaki = int(zenbaki)
 
-if zenbakia > = 0 and % 2 = = 0:
-print (zenbakia, "parea eta positiboa da")
-elif zenbakia < 0 and % 2! = 0:
-print (zenbakia: "bakoitia eta negatiboa da")
-LKif zenbakia < 0:
-print (zenbakia, "negatiboa da")
-LKse:
-print (zenbakia, "bakoitia da")
+if zenbaki >= 0 and zenbaki % 2 == 0:
+    print(zenbaki, " bikotia eta positiboa da")
+elif zenbaki < 0 and zenbaki % 2 != 0:
+    print(zenbaki, " bakoitia eta negatiboa da")
+elif zenbaki < 0:
+    print(zenbaki, " negatiboa da")
+else:
+    print(zenbaki, " bakoitia da")
 ```
 
 Emaitza:
@@ -332,24 +336,24 @@ GMI 25 eta 30 artean badago (<), mezua agertuko da: "Gehiegizko pisua duzu".
 GMI 30 baino handiagoa bada, mezu hau agertuko da: "Obesitate-arazoa duzu".
 
 ```python
-pisua = input ("Sartu zure pisua:")
-altuera = input ("Sartu zure altuera:")
-pisua = int (pisua)
-altuera = int (altuera)
+pisua = input("Sartu zure pisua: ")
+altuera = input("Sartu zure altuera: ")
+pisua = int(pisua)
+altuera = int(altuera)
 
-imc = pisua/(altuera* altuera)
+emaitza = pisua / (altuera * altuera)
 
-imc = (imc* 10000)
-print ("Zure imc:", imc)
+gmi = (emaitza * 10000)
+print("Zure gmi: ", imcRedondeado)
 
-if imc < 16:
-print ("Gehiago jan behar duzu")
-elif imc > = 16 and imc < 25:
-print ("Ondo zaude")
-elif imc > = 25 and imc < 30:
-print ("Gehiegizko pisua duzu")
-LKse:
-print ("Obesitate arazo bat duzu")
+if gmi < 16 :
+  print("Beharrezkoa da gehiago jan")
+elif gmi >= 16 and gmi < 25:
+  print("Ongi zaude")
+elif gmi >= 25 and gmi < 30:
+  print("Gorputz gordinagoa duzu")
+else:
+  print("Obesitate arazoa daukazu")
 ```
 
 Emaitza:
@@ -357,7 +361,7 @@ Emaitza:
 ```console
 Sartu zure pisua: 70
 Sartu zure altuera: 172
-Zure imc: 23.66143861546782
+Zure gmi: 23.66143861546782
 Ondo zaude
 ```
 
@@ -374,6 +378,7 @@ Sortu erabiltzaileari jokalari-dortsal bat eskatzen dion programa bat eta egin h
 ```python
 zenbakia = input("Sartu zenbakia: ")
 zenbakia = int(zenbakia)
+
 if zenbakia >= 0 and zenbakia <= 99:
   if zenbakia == 1:
       print("Atari gizona")
@@ -393,5 +398,5 @@ Emaitza:
 
 ```console
 Dortsala sartu: 11
-Erdilaria
+Erdilari jokalaria
 ```
