--- a/book_eu/02.md
+++ b/book_eu/02.md
@@ -11,7 +11,7 @@ Baldintza bat betetzen den bitartean, "whilee" begizta exekutatu egiten da. Egit
 
 ```python
 while* baldintza*:
-* jarraibideak*
+  *eragiketak*
 ```
 
 Adibidez, begizta bat exekutatuko dugu aldagai baten balioa 0 baino handiagoa den bitartean.
@@ -19,8 +19,8 @@ Adibidez, begizta bat exekutatuko dugu aldagai baten balioa 0 baino handiagoa de
 ```python
 kontagailua = 4
 while kontagailua > 0:
-print ("Begiztaren barruan nago")
-kontagailua = kontagailua - 1
+  print ("Begiztaren barruan nago")
+  kontagailua = kontagailua - 1
 ```
 
 Pantailako emaitza hau izango litzateke:
@@ -41,8 +41,8 @@ Sortu 0an hasitako kontagailu-aldagai bat definituko duen programa bat. Ondoren,
 ```python
 kontagailua = 0
 while kontagailua < 5:
-print ("Begiztaren barruan nago")
-kontagailua = kontagailua + 1
+    print("Begizta barruan nago")
+    kontagailua = kontagailua + 1
 ```
 
 Emaitza:
@@ -58,9 +58,9 @@ Begiztaren barruan nago
 Ikus dezagun beste adibide bat. Hurrengo programak datu bat eskatzen dio erabiltzaileari begizta batean. Programa ez da begiztatik aterako erabiltzaileak hutsuneari buruzko beste datu bat sartzen ez duen bitartean:
 
 ```python
-izena = "
-while nombre = = "":
-izena = input ("Nola duzu izena?")
+izena = ""
+while izena == "":
+  izena = input ("Nola duzu izena?")
 
 print ("Kaixo", izena)
 ```
@@ -70,15 +70,15 @@ print ("Kaixo", izena)
 Idatzi erabiltzaileari bi zenbaki eskatzen dizkion programa bat. Lehenak bigarrena baino txikiagoa izan behar du. Begiztak bi zenbaki horien arteko tartean dauden zenbakiak erakutsi behar ditu.
 
 ```python
-min = input ("Sartu gutxieneko bat:")
-min = int (min)
+min = input("Sartu minimo bat: ")
+min = int(min)
 
-max = input ("Sartu gehienez:")
-max = int (max)
+max = input("Sartu maximo bat: ")
+max = int(max)
 
 while min < max:
-print (min)
-min = min + 1
+    print(min)
+    min = min + 1
 ```
 
 Emaitza:
@@ -99,14 +99,14 @@ Begizta for ekintza bat errepikatzeko erabiltzen dugu. Baldintza bat baino gehia
 
 ```python
 for* aldakorra* in* tartea*:
-* jarraibideak*
+  *eragiketak*
 ```
 
 Adibidez, honako begizta honek "hola" mezua 4 aldiz erakutsiko du:
 
 ```python:
 for i in range (4):
-print ("Kaixo")
+  print ("Kaixo")
 ```
 
 Hona hemen emaitza:
@@ -122,7 +122,7 @@ For begiztetan oso interesgarria den zerbait da `i 'aldagaiak, nahi dugun izena 
 
 ```python:
 for i in range (4):
-print ("Kaixo", i)
+  print ("Kaixo", i)
 ```
 
 Eta emaitza egiaztatu:
@@ -141,13 +141,13 @@ Hori baliagarria izan dakiguke programa askotan.
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat, 0tik 10era biderkatzeko taula erakusten duena.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
-for i in range (11):
-print (balioa, "x", i, "=", (balioa* i))
-#Alternatibak:
-#print (" % d x % d = % d" % (balioa, i, balioa* i))
+for i in range(11):
+    print(balioa,"x",i,"=",(balioa*i))
+    # Aukerak:
+    # print("%d x %d = %d" % (balioa, i, balioa * i))
 ```
 
 Emaitza:
@@ -165,14 +165,14 @@ Sartu zenbaki bat: 3
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. 0 edo txikiagoa bada, zerbait handiagoa sartzeko adierazi behar duzu, eta bestela, "Python mola!" mezua erakutsi behar duzu pantailan, zenbakiak adierazten duen adina aldiz:
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0:
-print ("0 baino gehiago sartu behar duzu")
-LKse:
-for i in range (0, zenbakia):
-print ("Python mola!")
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
+else:
+    for i in range(0, zenbakia):
+        print("Python ondo dago!")
 ```
 
 Emaitza:
@@ -196,7 +196,7 @@ Adibidez:
 
 ```python:
 for i in range (5, 9):
-print ("Kaixo", i)
+  print ("Kaixo", i)
 ```
 
 Hona hemen emaitza:
@@ -218,7 +218,7 @@ Hurrengo adibidean, begizta zenbaki bikoitiekin egingo litzateke.
 
 ```python:
 for i in range (0, 6, 2):
-print ("Kaixo", i)
+  print ("Kaixo", i)
 ```
 
 Hona hemen emaitza:
@@ -236,7 +236,7 @@ Begizta atzerantz ere ibil daiteke, jauzi negatiboa eginez:
 ```python:
 print ("Atzerako kontaketa hasten:")
 for i in range (5, 0, -1):
-print (i)
+  print (i)
 ```
 
 Hona hemen emaitza:
@@ -254,11 +254,11 @@ Hona hemen emaitza:
 Idatzi erabiltzaileari zenbaki bat eskatzen dion programa bat. Ondoren, 0tik erabiltzaileak sartu duen zenbakira arteko zenbaki bikoiti guztiak erakutsi behar ditu. Erabili `formako 'begizta eta egin salto binaka.
 
 ```python
-balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
+balioa = input("Sartu zenbaki bat: ")
+balioa = int(balioa)
 
-for i in range (0, balioa, 2):
-print (i)
+for i in range(0, balioa, 2):
+    print(i)
 ```
 
 Emaitza:
@@ -277,7 +277,7 @@ Begizta bereziki erabilgarriak dira zerrenda bateko elementu guztiak aztertu nah
 ```python
 objektuak = ["izarra", "perretxikoa", "lorea"]
 for objektua in objektuak:
-print (objektuak)
+  print (objektuak)
 ```
 
 Begiztaren buelta bakoitzean, "objektu" aldagaiak balio bat hartuko du "objektu" zerrendatik, eta, beraz, emaitza hau izango da:
@@ -295,8 +295,8 @@ Batzuetan, baliteke begizta batetik irten eta beste ezer prozesatzen ez jarraitz
 ```python
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
 for izena in izenak:
-if izena = = "Ane":
-print ("Ane zerrendan dago")
+  if izena = = "Ane":
+    print ("Ane zerrendan dago")
 ```
 Programa horren arazoa da, nahiz eta `Aneere 'aurkitu, begiztak zerrendaren amaierara arte jarraituko duela. Zerrenda hori oso handia bada, gure programa ez da eraginkorra izango! Hasieran esan bezala, ordenagailuak oso tentelak dira. Gelditzeko esaten ez badiegu, aurrera jarraituko dute.
 
@@ -305,9 +305,9 @@ Zorionez, begiztetan break jarraibidea erabil dezakegu, begizta bat-batean bukat
 ```python
 izenak = ["Mia", "Jon", "Arya", "Ane", "Bug", "Ada", "Lisp"]
 for izena in izenak:
-if izena = = "Ane":
-print ("Ane zerrendan dago")
-break
+  if izena == "Ane":
+    print ("Ane zerrendan dago")
+    break
 ```
 
 2.5 ariketa
@@ -315,11 +315,11 @@ break
 Idatzi 3 zenbakidun zerrenda bat zehazten duen programa bat. Ondoren, sortu begizta for bat, zerrenda gainditu eta zenbakiak adierazten duen beste aldiz errepikatuko duena.
 
 ```python
-errepikatzea = [3, 6, 2]
+errepikatu = [3, 6, 2]
 
 for aldiz in errepikatu:
-for i in range (batzuetan):
-print ("Python")
+    for i in range(aldiz):
+        print("Python")
 ```
 
 Emaitza:
@@ -347,13 +347,13 @@ Baldintzak oso zehatzak ez direnean erabil daiteke `whilee 'begizta. Adibidez, e
 Idatzi programa bat "whilee" begizta batekin, erabiltzaileari izen bat eskatzeko (adibidez, "Ada") eta "Kaixo Ada" izen hori agurtzeko. "Irten" testua sartuz gero, buklea amaitu egin behar da.
 
 ```python
-izena = "
+izena = ""
 
-while izena! = "irten":
-izena = input ("Sartu izen bat:")
-print ("Kaixo", izena)
+while izena != "irtetzea":
+    izena = input("Sartu izen bat: ")
+    print("Kaixo", izena)
 
-print ("Amaiera. ")
+print("Amaiera.")
 
 ```
 
@@ -373,16 +373,16 @@ Amaiera.
 Idatzi programa bat, erabiltzaileari zenbaki bat eskatzen dion eta zenbakia 0 ez den bitartean amaitzen ez duen "whilee" begizta duena. Zenbakia sartu ondoren, agur bat erakutsi behar da zenbakiak adierazten duen beste aldiz. Zenbakia 0 baino txikiagoa bada, begizta "break" batekin amaitu behar da;
 
 ```python
-balioa = "
+balioa = ""
 
-while valor! = 0:
-balioa = input ("Sartu zenbaki bat:")
-balioa = int (balioa)
-if balioa < 0:
-break
+while balioa != 0:
+    balioa = input("Sartu zenbaki bat: ")
+    balioa = int(balioa)
+    if balioa < 0:
+        break
 
-for i in range (balioa):
-print ("Kaixo")
+    for i in range(balioa):
+        print("Kaixo")
 ```
 
 Emaitza:
@@ -407,18 +407,18 @@ Adibidez, 8 sartuz gero, hau erakutsiko du:
 Sartutako balioak baldintzak betetzen ez baditu, erabiltzaileari ohartarazteko mezu bat erakutsi behar diozu eta programa amaitu.
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0 or % 2! = 0:
-print ("0tik gorako zenbaki bikoitia sartu behar duzu")
-LKse:
-izarrak = "
-while zenbakia > 0:
-izarrak = izarrak + "*"
-numero = numero - 1
+if zenbakia <= 0 or zenbakia % 2 != 0:
+    print("0 baino handiagoa den zenbaki bikoitia sartu behar duzu")
+else:
+    izarrak = ""
+    while zenbakia > 0:
+        izarrak = izarrak + "*"
+        zenbakia = zenbakia - 1
 
-print (izarrak)
+    print(izarrak)
 ```
 
 Emaitza:
@@ -439,21 +439,21 @@ Adibidez, 4 zenbakia sartzen badute:
 - -* -
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0 or % 2! = 0:
-print ("0tik gorako zenbaki bikoitia sartu behar duzu")
-LKse:
-sekuentzia = ""
-kopurua = kopurua/2
-while zenbakia > 0:
-sekuentzia = sekuentzia + "* -"
-numero = numero - 1
+if zenbakia <= 0 or zenbakia % 2 != 0:
+    print("0 baino handiagoa den zenbaki bikoitia sartu behar duzu")
+else:
+    sekuentzia = ""
+    zenbakia = zenbakia / 2
+    while zenbakia > 0:
+        sekuentzia  = sekuentzia + "*-"
+        zenbakia = zenbakia - 1
 
-sekuentzia = sekuentzia + "*"
+    sekuentzia = sekuentzia + "*"
 
-print (sekuentzia)
+    print(sekuentzia)
 ```
 
 Emaitza:
@@ -476,20 +476,20 @@ Adibidez, 4 sartuz gero, hau erakutsiko da:
 ```
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0:
-print ("0 baino gehiago sartu behar duzu")
-LKse:
-izarrak = "\n"
-for i in range (zenbakia):
-for j in range (zenbakia):
-izarrak = izarrak + "*"
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
+else:
+    izarrak = "\n"
+    for i in range(zenbakia):
+        for j in range(zenbakia):
+            izarrak = izarrak + "*"
 
-izarrak = izarrak + "\n"
+        izarrak = izarrak + "\n"
 
-print (izarrak)
+    print(izarrak)
 ```
 
 Emaitza:
@@ -505,18 +505,18 @@ Sartu zenbaki bat: 2
 Sortu programa bat erabiltzaileari zenbaki oso bat eskatu eta haren faktoria kalkulatzeko. Adibidez, 5eko faktoria 5 x 4 x 3 x 2 x 1 = 120 izango litzateke.
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0:
-print ("0 baino gehiago sartu behar duzu")
-LKse:
-factorial = kopurua
-while zenbakia > 1:
-numero = numero - 1
-factorial = factorial* numero
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbaki bat sartu behar duzu")
+else:
+    faktoriala = zenbakia
+    while zenbakia > 1:
+        zenbakia = zenbakia - 1
+        faktoriala = faktoriala * zenbakia
 
-print ("Emaitza:", faktoria)
+    print("Emaitza: ", faktoriala)
 ```
 
 Emaitza:
@@ -531,26 +531,27 @@ Emaitza: 24
 Sortu erabiltzaileari zenbaki oso bat eskatzen dion programa bat eta egiaztatu zenbaki hori lehengusua den ala ez, hau da, berez edo 1egatik zatigarria den.
 
 ```python
-numero = input ("Sartu zenbaki bat:")
-kopurua = int (zenbakia)
+zenbakia = input("Sartu zenbaki bat: ")
+zenbakia = int(zenbakia)
 
-if zenbakia < = 0:
-print ("0 baino gehiago sartu behar duzu")
-LKse:
-zatigarria = False
-originala = zenbakia
-numero = numero - 1
+if zenbakia <= 0:
+    print("0 baino handiagoa den zenbakia sartu behar duzu")
+else:
+    zatigarria = False
+    hasierakoa = zenbakia
+    zenbakia = zenbakia - 1
 
-while zenbakia > 1 and not zatigarria:
-if originala % zenbakia = = 0:
-zatigarria = True
+    while zenbakia > 1 and not zatigarria:
+        if hasierakoa % zenbakia == 0:
+            zatigarria = True
 
-numero = numero - 1
+        zenbakia = zenbakia - 1
 
-if not divisible:
-print (jatorrizkoa, "lehengusua da. ")
-LKse:
-print (jatorrizkoa, "EZ da lehengusua. ")
+
+    if not zatigarria:
+        print(hasierakoa, " zenbakia lehena da.")
+    else:
+        print(hasierakoa, " lehen ez da.")
 ```
 
 Emaitza:
@@ -565,12 +566,12 @@ Sartu zenbaki bat: 5
 Sortu 0tik 10era biderkatzeko taula guztiak erakusten dituen programa bat.
 
 ```python
-for i in range (11):
-for j in range (11):
-print (i, "x", j, "=", i* j)
+for i in range(11):
+    for j in range(11):
+      print(i,"x",j,"=",i*j)
 
-#Gauza bera, bestela
-for i in range (11):
-for j in range (11):
-print (" % d x % d = % d" (i, j, i* j))
+# Honek ere berdin egingo du
+for i in range(11):
+    for j in range(11):
+      print(" %d x %d = %d" % (i, j, i*j))
 ```
