--- a/book_eu/03.md
+++ b/book_eu/03.md
@@ -48,14 +48,14 @@ Sortu programa bat 5 zenbaki hamartarrekin definitzeko. Gero, sortu begizta bat 
 
 ```python
 zenbakiak = [3.4, 2.7, 4.3, 6.6, 8.3]
-batura = 0.0
+batuketa = 0.0
 
-for zenbaki in zenbaki:
-batuketa = batuketa + zenbakia
+for zenbakia in zenbakiak:
+    batuketa = batuketa + zenbakia
 
-batez bestekoa = batuketa/len (zenbakiak)
+batazbestekoa = batuketa / len(zenbakiak)
 
-print ("Batez bestekoa da:", media)
+print("Batazbestekoa da: ", media)
 ```
 
 Emaitza:
@@ -128,12 +128,12 @@ for hizkuntza in hizkuntzak:
 print (hizkuntza)
 ```
 
-Aurkibidea erabiliz ere egin daiteke zerrenda. Horretarako, `rangea 'funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `lena' erabiliz:
+Aurkibidea erabiliz ere egin daiteke zerrenda. Horretarako, `range` funtzioa erabili beharko dugu, eta zerrendaren luzera eman beharko diogu, `lena' erabiliz:
 
 ```python
 hizkuntzak = ["Ingelesa", "Gaztelania", "Frantsesa"]
 for i in range (len (hizkuntzak)):
-print (hizkuntzak [i])
+  print (hizkuntzak [i])
 ```
 
 Dena den, indizea begiztaren barruan behar ez bada, hobe da zerrenda indizerik gabe egitea, aurreko adibidean egiten den bezala.
@@ -147,15 +147,16 @@ Definitu izenen zerrenda bat, erakutsi pantaila bidez. Gehitu elementu bat eta e
 
 ```python
 izenak = ["Ada", "Bug", "Neko"]
-print (izenak)
 
-nombres.append ("Miranda")
+print(izenak) # ["Ada", "Bug", "Neko"]
 
-print (izenak)
+izenak.append("Miranda")
 
-izenak [1]
+print(izenak) # ["Ada", "Bug", "Neko", "Miranda"]
 
-print (izenak)
+del izenak[1]
+
+print(izenak) # ["Ada", "Neko", "Miranda"]
 ```
 
 Emaitza:
@@ -190,11 +191,12 @@ Hiztegia honela adieraz daiteke:
 Defini ezazu telefonoak izeneko hiztegi bat, non lagun pare baten telefonoak gordeko dituzun. Gakoa lagunaren izena izango da, eta balioa, berriz, telefono-zenbakia.
 
 ```python
-telefonoak = {"Ada": 66555333, "Bug": 111000111}
-print (telefonoak)
+telefonoak = {"Ada": 666555333, "Bug": 111000111 }
 
-for izena in telefonos.keys ():
-print (izena, telefonoak [izena])
+print(telefonoak)
+
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 ```
 
 Emaitza:
@@ -221,7 +223,7 @@ print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14, 'Miranda': 23}
 print (adinak) # {'Neko': 2, 'Ada': 14, 'Miranda': 23}
 
 for izena in edades.keys ():
-print (izena, adinak [izena])
+  print (izena, adinak[izena])
 ```
 
 3.4 ariketa
@@ -231,15 +233,15 @@ Erabili aurreko ekitaldiko telefonoen hiztegia. Eskatu erabiltzaileari datuak hi
 Amaieran, hiztegiko elementu guztiak erakusten ditu.
 
 ```python
-telefonoak = {"Ada": 66555333, "Bug": 111000111}
+telefonoak = {"Ada": 666555333, "Bug": 111000111}
 
-izena = input ("Sartu izen bat:")
-telefonoa = input ("Sartu zenbaki bat:")
+izena = input("Sartu izena: ")
+telefonoa = input("Sartu telefono zenbakia: ")
 
-telefonoak [izena] = int (telefonoa)
+telefonoak[izena] = int(telefonoa)
 
-for izena in telefonos.keys ():
-print (izena, telefonoak [izena])
+for izena in telefonoak.keys():
+    print(izena, telefonoak[izena])
 
 ```
 
@@ -258,7 +260,7 @@ Hiztegiko balioak ezabatu ditzakegu, honako funtzio honekin:
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 print (adinak) # {'Bug': 10, 'Neko': 2, 'Ada': 14}
-["Bug"]
+del adinak["Bug"]
 print (adinak) # {'Neko': 2, 'Ada': 14}
 ```
 
@@ -268,7 +270,7 @@ Ez dago arazorik, baina hiztegiaren gako guztiak itzuliko dizkigun funtzio bat e
 ```python
 adinak = {"Ada": 14, "Bug": 10, "Neko": 2}
 for izena in edades.keys ():
-print (izena, adinak [izena])
+  print (izena, adinak [izena])
 ```
 
 Pantailaren arabera:
@@ -292,7 +294,7 @@ izena = input ("Sartu izen bat:")
 telefonoak [izena]
 
 for izena in telefonos.keys ():
-print (izena, telefonoak [izena])
+  print (izena, telefonoak[izena])
 ```
 
 Emaitza:
@@ -333,25 +335,25 @@ Idatzi bezeroa izeneko hiztegi-zerrenda bat zehazten duen programa bat, gakoak d
 
 ```python
 bezeroak = [
-{
-"Izena": "Juan",
-"email": "jj@terra.com",
-"adina": 39
-},
-{
-"Izena": "Pedro",
-"email": "pp@ozu.es",
-"adina": 42
-},
-{
-"izena": "Ana",
-"email": "ana@ole.com",
-"adina": 37
-}
+    {
+        "izena": "Juan",
+        "email": "jj@terra.com",
+        "adina": 39
+    },
+    {
+        "izena": "Pedro",
+        "email": "pp@ozu.es",
+        "adina": 42
+    },
+    {
+        "izena": "Ana",
+        "email": "ana@ole.com",
+        "adina": 37
+    }
 ]
 
 for bezeroa in bezeroak:
-print (f "{bezeroa ['izena']} {bezeroa ['adina']}")
+    print(f"{bezeroak['izena']} {bezeroak['adina']}")
 ```
 
 Emaitza:
@@ -550,12 +552,12 @@ Idatz ezazu 5 zenbakiko zerrenda bat hasten duen programa bat (0ra hasitakoak), 
 
 ```python
 izenak = ["Frodo", "Sam", "Merrin", "Pippin"]
-booleanos = [True]* 5
-zenbakiak = [0]* 5
+logikoak = [True]*5
+zenbakiak = [0]*5
 
-print (izenak)
-print (zenbakiak)
-print (boolearrak)
+print(izenak)
+print(zenbakiak)
+print(logikoak)
 ```
 
 Emaitza:
@@ -573,11 +575,11 @@ Idatzi 10 zenbakiko zerrenda bat zehazten duen programa bat. Ondoren, begizta ba
 ```python
 zenbakiak = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
-for i in range (len (zenbakiak)):
-if i % 2 = = 0:
-[i] = 0 zenbakiak
+for i in range(len(zenbakiak)):
+    if i % 2 == 0:
+        zenbakiak[i] = 0
 
-print (zenbakiak)
+print(zenbakiak)
 ```
 Emaitza:
 
@@ -593,24 +595,24 @@ Idatzi zerrenda bat kudeatzeko programa bat, erabiltzaileari 4 aukera dituen men
 zenbakiak = []
 aukera = -1
 
-while aukera! = "4":
-print ("Aukeratu aukera")
-print ("1. Elementua sartu. ")
-print ("2. Elementua atera. ")
-print ("3. Erakutsi zerrenda. ")
-print ("4. Irten. ")
-aukera = input ("Aukeratu aukera:")
+while aukera != "4":
+    print("Aukeratu")
+    print("1. Elementua sartu.")
+    print("2. Elementua kendu.")
+    print("3. Arraia erakutsi.")
+    print("4. Irten.")
+    aukera = input("Sartu aukera: ")
 
-if "1":
-ugari.append (0)
-elif "2":
-ugari.pop ()
-elif "3":
-print (zenbakiak)
-elif "4":
-print ("Beste batera arte")
-LKse:
-print ("Aukera ezezaguna")
+    if "1":
+        zenbakiak.append(0)
+    elif "2":
+        zenbakiak.pop()
+    elif "3":
+        print(zenbakiak)
+    elif "4":
+        print("Agurra")
+    else:
+        print("Aukera ezezaguna")
 ```
 
 Emaitza:
@@ -630,16 +632,16 @@ Aukera ezazu: 3
 Idatzi erabiltzaileari hitzak eskatu eta esaldi bat eraikitzeko kateatzen dituen programa bat, erabiltzaileak puntu bat idatzi arte (.). Orduan programak sortutako esaldia erakutsi beharko du. Erabiltzaileak ez badu ezer idazten, ez da ezer kateatu behar.
 
 ```python
-esaldia = "
-hitza = "
+izenburua = ""
+hitza = ""
 
-while palabra! = ".":
-hitza = input ("Idatzi hitz bat:")
+while hitza != ".":
+    hitza = input("Idatzi hitz bat: ")
 
-if hitza! = "." or hitza! = "":
-esaldia = esaldia + "" + hitza
+    if hitza != "." or hitza != "":
+        izenburua = izenburua + " " + hitza
 
-print ("Sortutako esaldia:", esaldia)
+print("Sortutako esaldi:", izenburua)
 ```
 
 Emaitza:
@@ -657,12 +659,13 @@ Kaixo, zer moduz?
 Idatzi programa bat erabiltzaileari bere izena, jaioterria eta jaioturtea eskatzeko. Ondoren, esaldi bat erakutsi behar duzu informazio horrekin guztiarekin, interpolazioa edo kate-txantiloiak erabiliz.
 
 ```python
-izena = input ("Idatzi zure izena:")
-lekua = input ("Idatzi zure jaioterria:")
-data = input ("Idatzi zure jaioturtea:")
-mezua = f "{izena} duzu izena {lekua} (e) n jaio zinen {data}"
+izen = input("Idatzi zure izena: ")
+jaiotegia = input("Idatzi jaiotze lekua: ")
+urtea = input("Idatzi jaiotze urtea: ")
 
-print (mezua)
+mezua = f"{izen} izena duzu, {jaiotegia}n jaio zinen {urtea} urtean"
+
+print(mezua)
 ```
 
 Emaitza:
@@ -679,19 +682,19 @@ Ada duzu izena, Tevergan jaio zinen 2006an.
 Idatzi erabiltzaileari esaldi bat eskatzen dion programa bat. Gero esaldi horretako hitz bat eskatu behar du, eta, ondorioz, programak esaldi bera itzuliko du letra larriz:
 
 ```python
-esaldia = input ("Idatzi esaldi bat:")
-hitza = input ("Idatzi esaldi horretako hitz bat:")
+frasea = input("Idatzi esaldi bat: ")
+hitza = input("Idatzi esalditik hitz bat: ")
 
-posicion = frase.index (hitza)
+posizioa = frasea.index(hitza)
 
-if posicion! = -1:
-hasiera = esaldia [0: posizioa]
-amaiera = esaldia [posizioa + len (hitza): len (esaldia)]
-emaitza = f "{hasiera} {palabra ra.upper ()} {amaiera}"
+if posizioa != -1:
+    hasiera = frasea[0:posizioa]
+    bukaera = frasea[posizioa + len(hitza):len(frasea)]
+    emaitza = f"{hasiera}{hitza.upper()}{bukaera}"
 
-print (emaitza)
-LKse:
-print (hitza, "ez dago esaldian. ")
+    print(emaitza)
+else:
+    print(hitza, "ez dago esaldian.")
 ```
 
 Emaitza:
@@ -710,11 +713,11 @@ Sortu 5 izeneko zerrenda bat definitzen duen programa bat eta, ondoren, erabili 
 izenak = ["Frodo", "Merrin", "Sam", "Pip", "Bilbo"]
 
 for izena in izenak:
-print (izena)
+    print(izena)
 
-#aldaera:
-for i in range (len (izenak)):
-print (izenak [i])
+# alda-eredu bat:
+for i in range(len(izenak)):
+    print(izenak[i])
 
 ```
 
@@ -735,13 +738,18 @@ Sortu 10 zenbaki osoko zerrenda bat zehazten duen programa bat. Gero, beste begi
 ```python
 zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
 
-for i in range (len (zenbakiak)):
-[i] = zenbakiak [i] + 1
+for zenbakia in zenbakiak:
+    print(zenbakia)
 
-print (zenbakiak)
+for i in range(len(zenbakiak)):
+    zenbakiak[i] = zenbakiak[i] + 1
 
-#Batuketarako alternatiba:
-#Gehituak = ugari.map (zenbakia = > zenbakia + 1)
+for zenbakia in zenbakiak:
+    print(zenbakia)
+
+
+# Gehiketarako alternatiba:
+# zenbakiakGehitu = zenbakiak.map( zenbakia => zenbakia + 1 )
 ```
 
 Emaitza:
@@ -755,23 +763,23 @@ Emaitza:
 Sortu 10 zenbaki osoko zerrenda bat definitzen duen programa bat. Ondoren, sortu begizta bat zerrendan elementuren bat errepikatuta dagoen zehazteko. Errepikatutako bat aurkitzea nahikoa da.
 
 ```python
-zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
+numeruak = [3, 5, -4, 2, 1, 4, 0, 6, 9, 8, 3]
 errepikatua = False
 i = 0
 j = 0
 
-while i < len (zenbakiak) and not errepikatua:
-while j < len (zenbakiak):
-if zenbakiak [i] = = zenbakiak [j]:
-errepikatua = True
-break
-j = j + 1
-i = i + 1
+while i < len(numeruak) and not errepikatua:
+    while j < len(numeruak):
+        if numeruak[i] == numeruak[j]:
+            errepikatua = True
+            break
+        j = j + 1
+    i = i + 1
 
 if errepikatua:
-print ("Zenbaki bat errepikatuta dago")
-LKse:
-print ("Ez dago zenbaki errepikaturik")
+    print("Zenbaki bat errepikatuta dago")
+else:
+    print("Ez dago zenbaki errepikaturik")
 ```
 
 Emaitza:
@@ -789,19 +797,19 @@ zenbakiak = [3, 5, -4, 2, 1, 4, 0, 6, -9, 8, 3]
 
 positiboak = 0
 negatiboak = 0
-zeroak = 0
+hutsak = 0
 
-for zenbaki in zenbaki:
-if > 0 zenbakia:
-positiboak = positiboak + 1
-LKif zenbakia < 0:
-negatiboak = negatiboak + 1
-LKse:
-zeroak = zeroak + 1
+for zenbakia in zenbakiak:
+    if zenbakia > 0:
+        positiboak = positiboak + 1
+    elif zenbakia < 0:
+        negatiboak = negatiboak + 1
+    else:
+        hutsak = hutsak + 1
 
-print ("Positiboak:", positiboak)
-print ("Negatiboak:", negatiboak)
-print ("Zeroak:", zeroak)
+print("Positiboak: ", positiboak)
+print("Negatiboak: ", negatiboak)
+print("Hutsak: ", hutsak)
 ```
 
 Emaitza:
@@ -827,21 +835,21 @@ Horren ondoren, sortu beste begizta bat, elementuren batean 15 zenbakia aurkituz
 ```python
 import random
 
-matrizea = [([[0]* 10)]* 5
+matrizea = [([0] * 10)] * 5
 
-print (matrizea)
+print(matrizea)
 
-for i in range (len (matrizea)):
-random.seed ()
-for j in range (len (matrizea [i])):
-matrizea [i] [j] = random.randint (0, 30)
+for i in range(len(matrizea)):
+    random.seed()
+    for j in range(len(matrizea[i])):
+        matrizea[i][j] = random.randint(0, 30)
 
-print (matrizea)
+print(matrizea)
 
-for i in range (len (matrizea)):
-for j in range (len (matrizea [i])):
-if matrizea [i] [j] = = 15:
-print ("Aurkitu 15 in", i,)
+for i in range(len(matrizea)):
+    for j in range(len(matrizea[i])):
+        if matrizea[i][j] == 15:
+            print("15 aurkitu da ", i)
 ```
 
 3.11 ariketa
@@ -853,16 +861,15 @@ import random
 
 zenbakiak = [4, 7, -3, 7, 1, 11, 9, 0, 5, 8]
 
-print (zenbakiak)
+print(zenbakiak)
 
-for i in range (len (zenbakiak)):
-aurkibide aleatorioa = random.randint (0, len (zenbakiak) - 1)
-aurrekoa = zenbakiak [i]
-[i] = zenbakiak [ausazko aurkibidea]
-zenbakiak [ausazko aurkibidea] = aurrekoa
+for i in range(len(zenbakiak)):
+    ausazko_indizea = random.randint(0, len(zenbakiak) - 1)
+    aurrekoa = zenbakiak[i]
+    zenbakiak[i] = zenbakiak[ausazko_indizea]
+    zenbakiak[ausazko_indizea] = aurrekoa
 
-print (zenbakiak)
-```
+print(zenbakiak)
 
 Emaitza:
 
